# farmer

./: .flaskenv  .gitignore  Dockerfile  Dockerfile.j2  Pipfile  README.md  action.yml  config.ini  config.py  docker-compose.yml  docker-start.sh  dockerfile_maker.py  install_farmer.sh  main.py  noxfile.py  nvidia-container-runtime-script.sh  pyproject.toml  secret.ini  setup.py
.github/workflows/: README.md  main.yml
apps/api/: __init__.py  main.py  view.py
apps/domain/model/: config_model.py  (+2 more)
apps/ncc/: __init__.py
config/: classification-config.ini
example/: classification-config-eval.yaml  classification-config.ini  classification-config.yaml  data.json  detection-config-eval.yaml  detection-config.yaml  run.ini  run.yaml  secret.yaml  segmentation-config-eval.ini  segmentation-config-eval.yaml  segmentation-config.ini  segmentation-config.yaml
example/yamls/: classification-eval.yaml  classification-video.yaml  classification.yaml  curriculum_artery_00_a_run_1.yaml  detection-eval.yaml  detection.yaml  run.yaml  segmentation-aug.yaml  segmentation-eval.yaml  segmentation-optuna.yaml  segmentation.yaml  segmentation_aug.yaml
examples/: cifar10.py  mnist.py
examples/fit_from_annotation/: cifar10.py
examples/fit_from_array/: cifar10.py  mnist.py
examples/fit_from_directory/: cifar10.py  mnist.py
farmer/: __init__.py  main.py  view.py
farmer/Classifier/: Classifier.py  __init__.py
farmer/ImageAnalyzer/: README.md  __init__.py  config.ini  eval.py  fit.py  secret_config.ini  task.py  train.py
farmer/api/: __init__.py  main.py  view.py
farmer/classifier/: __init__.py  classifier.py
farmer/domain/: __init__.py
farmer/ncc/: __init__.py
(+172 files in other folders)
