[tool.poetry]
name = "farmer"
version = "1.4.0"
description = "Auto Machine Learning"
authors = ["Hiroki Matsuzaki"]

[tool.poetry.dependencies]
python = "3.6.9"
tensorflow = "^2.1.0"
tensorflow-estimator = "2.1.0"
pretrainedmodels = "^0.7.4"
scikit-learn = "^0.22.2"
dataclasses = "0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
